--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,4 @@
-<h1>OK</h1>
-<h2><%= l(@time) %></h2>
+<div style="text-align: center; margin-top: 200px">
+  <h1>OK</h1>
+  <h2><%= l(@time) %></h2>
+</div>
